@@ -5,6 +5,7 @@ Date: 2022-01-31
     - Fix default setting for refractory recipes.
       WARNING: If you use these recipes, update your refractory recipes setting before
       saving your game.
+    - Fix some refractory recipes when used without certain mods
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.9
 Date: 2022-01-25
